# premadegraph

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  DYNAMIC_SCORING_PLAN.md  IMPLEMENTATION_PROMPT.md  LICENSE  README.hu.md  README.md  TERMS_OF_USE.md  code_collector.py  compile-thesis.bat  docker-compose.yml  dsopfeed_prompt.md  package-lock.json  package.json  premadegraph.sln  usecase.puml
.claude/: settings.local.json
backend/: .dockerignore  Dockerfile  add_new_players.js  assign_countries.py  build_graph.py  cluster_persistence.py  conclude.py  docker-entrypoint.sh  export-neurosim-clusters.js  fetch_clusters.py  find_puuid.py  match_collector.py  neurosim-bridge.js  neurosim-desktop-contract.js  neurosim-desktop-contract.test.js  new_build_graph.py  normalize_players_by_puuid.js  package-lock.json  package.json  players.db  scoring_config.js  server.js
backend/genetic-neurosim/backend/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  flexset-clusters.json  init.sql
backend/genetic-neurosim/backend/backend/genetic-neurosim/logs/: neurosim-cli-run.tombstones.json
backend/genetic-neurosim/backend/src/: db.rs  desktop_protocol.rs  events.rs  frame_v1.rs  lineage_registry.rs  main.rs  simulation.rs  tombstone.rs  tribes.rs  war.rs  world.rs
docs/: 2026-05-03-neurosim-tribal-simulation.md  DOCUMENT_MAP.md  README.md  apex-flex-collection-strategy.md  birdseye-3d-sphere.md  chapter-evidence-map.md  claude-graph-v2-analysis-prompt.md  dynamic-opscore-system.md  frontend-plan-signed-balance-assortativity.md  graph-builder-v2.md  mainraw.tex  (+16 more)
(+575 files in other folders)
