[package]
name = "neurosim-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.2", features = ["ws", "macros", "json"] }
futures = "0.3.31"
parking_lot = "0.12.3"
rand = { version = "0.9.0", features = ["small_rng"] }
rayon = "1.10.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
